--- a/HumaneSociety/HumaneSociety/HumaneSociety.csproj
+++ b/HumaneSociety/HumaneSociety/HumaneSociety.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adopter.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="HumaneSociety.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
