adding in some code to the AddAnimal methods called.

--- a/HumaneSociety/HumaneSociety/HumaneSociety.csproj
+++ b/HumaneSociety/HumaneSociety/HumaneSociety.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adopter.cs" />
+    <Compile Include="DatabaseWriter.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="HumaneSociety.cs" />
     <Compile Include="Program.cs" />
