--- a/HumaneSociety/HumaneSociety/App.config
+++ b/HumaneSociety/HumaneSociety/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="HumaneSociety.Properties.Settings.TheHumaneSocietyConnectionString"
+            connectionString="Data Source=EDDIE-THINK;Initial Catalog=TheHumaneSociety;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
