--- a/HumaneSociety/HumaneSociety/HumaneSociety.csproj
+++ b/HumaneSociety/HumaneSociety/HumaneSociety.csproj
@@ -56,6 +56,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ISqlConnector.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +69,10 @@
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>LinqToSql.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
