--- a/HumaneSociety/HumaneSociety/HumaneSociety.csproj
+++ b/HumaneSociety/HumaneSociety/HumaneSociety.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DatabaseWriter.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="HumaneSociety.cs" />
+    <Compile Include="HumaneSocietyWallet.cs" />
     <Compile Include="LinqToSql.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
